# automated-research-report-generation

./: .env  .gitignore  pyproject.toml  requirements.txt
Experiements/: notebook.ipynb
research_and_analyst/backend_server/: workflow.py
research_and_analyst/config/: config.yaml
research_and_analyst/utils/: model_loader.py
