[project]
name = "multi-agent-automated-research-report-generation"
version = "0.1.0"
description = "Automated multi-agent research and report generation system"
readme = "README.md"

# Keep this tight so uv doesn't try Python 3.13
requires-python = ">=3.11,<3.13"

# Let requirements.txt control everything
dependencies = [
    "ipykernel>=7.2.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
multi-agent-automated-research-report-generation = { workspace = true }

[dependency-groups]
dev = [
    "aiofiles>=23.2.1",
    "bcrypt>=4.1.2",
    "fastapi<=0.115.6",
    "httpx<=0.28.1",
    "jinja2<=3.1.6",
    "langchain-community<=0.3.29",
    "langchain-core>=0.3.75,<=0.3.78",
    "langchain-google-genai<=2.1.6",
    "langchain-groq<=0.3.5",
    "langchain-openai<=0.3.27",
    "langgraph<=0.6.5",
    "multi-agent-automated-research-report-generation",
    "passlib<=1.7.4",
    "python-docx<=1.2.0",
    "python-multipart>=0.0.22",
    "reportlab<=4.4.4",
    "sqlalchemy<=2.0.43",
    "structlog<=25.4.0",
    "tavily-python<=0.7.12",
    "uvicorn<=0.29.0",
    "wikipedia<=1.4.0",
]
