[project]
name = "multi-agent-automated-research-report-generation"
version = "0.1.0"
description = "Automated multi-agent research and report generation system"
readme = "README.md"
requires-python = ">=3.11,<3.13"

# Runtime deps only (keep minimal)
dependencies = []

[project.scripts]
research_analyst = "automated_research_report_generation.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["automated_research_report_generation*"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
multi-agent-automated-research-report-generation = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langgraph<=0.6.5",
    "langchain-core>=0.3.75,<=0.3.78",
    "langchain-community<=0.3.29",
    "langchain-openai<=0.3.27",
    "langchain-google-genai<=2.1.6",
    "langchain-groq<=0.3.5",
    "tavily-python<=0.7.12",
    "wikipedia<=1.4.0",
    "fastapi<=0.115.6",
    "uvicorn<=0.29.0",
    "httpx<=0.28.1",
    "jinja2<=3.1.6",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.22",
    "sqlalchemy<=2.0.43",
    "bcrypt>=4.1.2",
    "passlib<=1.7.4",
    "python-docx<=1.2.0",
    "reportlab<=4.4.4",
    "structlog<=25.4.0",
    "multi-agent-automated-research-report-generation",
]
